--- a/src/main/resources/common.conf
+++ b/src/main/resources/common.conf
@@ -34,6 +34,8 @@ sso.encryption.key="P5xsJ9Nt+quxGZzB4DeLfw=="
 
 ws.acceptAnyCertificate=true
 
+cookie.deviceId.secret="some_secret"
+
 # Session configuration
 # ~~~~~
 session.httpOnly=true
