--- a/src/main/resources/common.conf
+++ b/src/main/resources/common.conf
@@ -77,6 +77,7 @@ metrics {
 controllers {
   # govuk template controller
   controllers.template.Template {
+    needsAuth = false
     needsAuditing = false
     needsLogging = false
   }
