--- a/src/main/resources/common.conf
+++ b/src/main/resources/common.conf
@@ -21,7 +21,7 @@ run.mode=Dev
 # If you deploy your application to several instances be sure to use the same key!
 
 # this key is for local development only!
-application.secret="yNhI04vHs9<_HWbC`]20u`37=NGLGYY5:0Tg5?y`W<NoJnXWqmjcgZBec@rOxb^G"
+play.crypto.secret="yNhI04vHs9<_HWbC`]20u`37=NGLGYY5:0Tg5?y`W<NoJnXWqmjcgZBec@rOxb^G"
 
 # this key is for local development only!
 cookie.encryption.key="gvBoGdgzqG1AarzF1LY0zQ=="
