--- a/src/main/resources/common.conf
+++ b/src/main/resources/common.conf
@@ -32,21 +32,21 @@ queryParameter.encryption=${cookie.encryption}
 # this key is for local development only!
 sso.encryption.key="P5xsJ9Nt+quxGZzB4DeLfw=="
 
-ws.acceptAnyCertificate=true
+play.ws.acceptAnyCertificate=true
 
 cookie.deviceId.secret="some_secret"
 
 # Session configuration
 # ~~~~~
-session.httpOnly=true
+play.http.session.httpOnly=true
 
-session.secure=false
+play.http.session.secure=false
 
-session.cookieName="mdtp"
+play.http.session.cookieName="mdtp"
 
 # The application languages
 # ~~~~~
-application.langs="en"
+play.i18n.langs="en"
 
 # Logger
 # ~~~~~
